# pinsim

./: CMakeLists.txt  README.md
config/: rpi_pinout.json
src/: main.cpp
src/rpisim/app/: rpisim.cpp  rpisim.hpp
src/rpisim/controller/: controller.cpp  controller.hpp
src/rpisim/model/: cpin.cpp  cpin.hpp  model.cpp  model.hpp
src/rpisim/view/: view.cpp  view.hpp
